--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <title>{% block title %}{% endblock title %}</title>
     
   </head>
-  <body    >
+  <body style="background :url(https://wallpaperaccess.com/full/1426870.png) no-repeat fixed; background-size: 100% 100%;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color:darkgray;">
         <div class="container-fluid">
           <a class="navbar-brand" href="/home">Navbar</a>
