--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,8 @@
       <h5 class="card-title" style="font-size:30px;margin-left: 50px;">Linear Regression</h5>
       <p class="card-text" style="font-size:20px;">Linear regression analysis is used to predict the value of a variable based on the value of another variable.</p>
       <a href="/linear" class="btn btn-primary" style="margin-left:100px;">Linear regression</a>
-      <a href="/linear2" class="btn btn-primary" style="margin-left:100px;">Linear regression</a>
+      <a href="/linear2" class="btn btn-primary" style="margin-left:100px;">Linear regression2</a>
+      <a href="/linear3" class="btn btn-primary" style="margin-left:100px;">Linear regression3</a>
     </div>
   </div>
   <button type="submit" class="btn btn-dark" id="btn">Dark</button>
