--- a/templates/home.html
+++ b/templates/home.html
@@ -3,28 +3,46 @@
 <div class="container">
 {% block body %}
 <br><br>
-<div class="container">
-<div class="card" style="width: 25rem;text-align: justify;">
+<div class="container row">
+<div class="card col-sm-2" style="width: 25rem;text-align: justify;">
     <img src="https://www.digitalvidya.com/wp-content/uploads/2019/03/Linear-Regression.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title" style="font-size:30px;margin-left: 50px;">Linear Regression</h5>
       <p class="card-text" style="font-size:20px;">Linear regression analysis is used to predict the value of a variable based on the value of another variable.</p>
-      <a href="/linear" class="btn btn-primary" style="margin-left:100px;">Linear regression</a>
-      <a href="/linear2" class="btn btn-primary" style="margin-left:100px;">Linear regression2</a>
-      <a href="/linear3" class="btn btn-primary" style="margin-left:100px;">Linear regression3</a>
+      <a href="/linear" class="btn btn-primary" style="margin-left:100px;">Linear regression&nbsp;&nbsp;&nbsp;</a>
+      <br><br>
+      <a href="/linear2" class="btn btn-primary" style="margin-left:100px;">Linear regression 2</a>
+      <br><br>
+      <a href="/linear3" class="btn btn-primary" style="margin-left:100px;">Linear regression 3</a>
     </div>
   </div>
-  <button type="submit" class="btn btn-dark" id="btn">Dark</button>
-  <form class="row g-3" method="post" action="/linear">
-    {% csrf_token %}
-    <div class="col-md-4">
-        <label for="validationDefault01" class="form-label">First name</label>
-        <input type="text" class="form-control" id="validationDefault01" name="link" placeholder="enter name" required>
+  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+  <div class="card col-sm-2" style="width: 25rem;text-align: justify;">
+    <img src="https://www.digitalvidya.com/wp-content/uploads/2019/03/Linear-Regression.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title" style="font-size:30px;margin-left: 50px;">Linear Regression</h5>
+      <p class="card-text" style="font-size:20px;">Linear regression analysis is used to predict the value of a variable based on the value of another variable.</p>
+      <a href="/linear" class="btn btn-primary" style="margin-left:100px;">Linear regression&nbsp;&nbsp;&nbsp;</a>
+      <br><br>
+      <a href="/linear2" class="btn btn-primary" style="margin-left:100px;">Linear regression 2</a>
+      <br><br>
+      <a href="/linear3" class="btn btn-primary" style="margin-left:100px;">Linear regression 3</a>
     </div>
-    <div class="col-12">
-        <button class="btn btn-primary" type="submit">Submit form</button>
+  </div>
+  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+  <div class="card col-sm-6" style="width: 25rem;text-align: justify;">
+    <img src="https://www.digitalvidya.com/wp-content/uploads/2019/03/Linear-Regression.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title" style="font-size:30px;margin-left: 50px;">Linear Regression</h5>
+      <p class="card-text" style="font-size:20px;">Linear regression analysis is used to predict the value of a variable based on the value of another variable.</p>
+      <a href="/linear" class="btn btn-primary" style="margin-left:100px;">Linear regression&nbsp;&nbsp;&nbsp;</a>
+      <br><br>
+      <a href="/linear2" class="btn btn-primary" style="margin-left:100px;">Linear regression 2</a>
+      <br><br>
+      <a href="/linear3" class="btn btn-primary" style="margin-left:100px;">Linear regression 3</a>
     </div>
-</form>
+  </div>
+  
 
 </div>
 
