--- a/templates/linear3.html
+++ b/templates/linear3.html
@@ -3,13 +3,10 @@
 <div class="container">
 {% block body %}
 
-<h2 style="margin-left:950px;margin-top: 90px;position:absolute;" id="h">{{variable}}
+<h2 style="margin-left:950px;margin-top: 90px;" id="h">{{variable}}
    
 </h2>
 
-
-<div style="margin-left:20px; margin-top:-50px;">
-{{graph|safe}}
 <br><br>
 <div class="jumbotron bg-light rounded-3 p-3 text-center" >
     <h2>{{model}}</h2>
