--- a/templates/intro.html
+++ b/templates/intro.html
@@ -51,6 +51,31 @@ called generalization error.
           
        
       </div> 
+      <div class="jumbotron p-1 bg-light rounded-3 h-100 " >
+        <h1 class="display-5">Unsupervised Learning</h1>
+        <p style="font-size:22px;">
+            Unsupervised learning is a type of algorithm that learns patterns from untagged data. The hope
+is that through mimicry, which is an important mode of learning in people, the machine is forced
+to build a compact internal representation of its world and then generate imaginative content from
+it. In contrast to supervised learning where data is tagged by an expert, e.g. as a 'ball' or 'fish',
+unsupervised methods exhibit self-organization that captures patterns as probability
+densities or a combination of neural feature preferences. The other levels in the supervision
+spectrum are reinforcement learning where the machine is given only a numerical performance
+score as guidance, and semi-supervised learning where a smaller portion of the data is tagged.
+Two broad methods in Unsupervised Learning are Neural Networks and Probabilistic Methods.
+            
+        </p>
+        <br>
+        <h1 class="display-6">Types of Unsupervised Machined Learning Algorithms:</h1>
+        <ul class="list-group list-group-flush bg-light">
+            <li class="list-group-item" style="font-size:22px;">Clustering</li>
+            <li class="list-group-item" style="font-size:22px;">Apriori Algorithms</li>
+            <li class="list-group-item" style="font-size:22px;">Principal component analysis</li>
+            <li class="list-group-item" style="font-size:22px;">Autoencoders</li>
+          </ul>
+          
+       
+      </div> 
 
    
   </div>
