--- a/templates/logistic.html
+++ b/templates/logistic.html
@@ -3,12 +3,9 @@
 <div class="container">
 {% block body %}
 
-<h2 style="margin-left:950px;margin-top: 90px;position:absolute;">{{variable}}</h2>
+<h2 style="margin-left:950px;margin-top: 90px;">{{variable}}</h2>
+<br>
 
-<div style="margin-left:20px; margin-top:-50px;">
 
-
-</div>
-</div>
 
 {% endblock body %}
