--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <title>{% block title %}{% endblock title %}</title>
     
   </head>
-  <body style="background: radial-gradient(circle, rgba(210,210,210,1) 0%, rgba(135,135,135,1) 84%);
+  <body style="background: radial-gradient(circle, rgba(231,231,231,1) 0%, rgba(172,172,172,1) 53%);
   width:100%;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
         <div class="container-fluid">
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="/intro">What is Machine Learning?</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Linear Regression
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -34,15 +34,26 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Chart
+                <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Logistic Regression
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/linear">Linear Regression Example 1</a></li>
-                  <li><a class="dropdown-item" href="/linear2">Linear Regression Example 2</a></li>
-                  <li><a class="dropdown-item" href="/chart">Linear Regression Example 3</a></li>
+                  <li><a class="dropdown-item" href="/linear">Logistic Regression Example 1</a></li>
+                  <li><a class="dropdown-item" href="/linear2">Logistic Regression Example 2</a></li>
+                  <li><a class="dropdown-item" href="/linear3">Logistic Regression Example 3</a></li>
                 </ul>
               </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  SVM
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="/linear">SVM Example 1</a></li>
+                  <li><a class="dropdown-item" href="/linear2">SVM Example 2</a></li>
+                  <li><a class="dropdown-item" href="/linear3">SVM Example 3</a></li>
+                </ul>
+              </li>
+              
               
             </ul>
           </div>
