--- a/templates/home.html
+++ b/templates/home.html
@@ -27,41 +27,48 @@
   }
 </style>
 
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel" style="height:500px">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></button>
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" ></button>
     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" ></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100 h-100" src="/static/machine.jpg" alt="First slide">
+    <div class="carousel-item active" style="height:500px">
+      <img class="d-block w-100 " style="height:500px" src="/static/car1.jpg" alt="First slide">
       <div class="container">
-        <div class="carousel-caption text-start">
+        <div class="carousel-caption text-start" style="margin-left:-150px">
           <h1>Learn Machine Learning</h1>
           <p>Machine learning is a field of inquiry devoted to understanding and building methods that 'learn',
              that is,<br> methods that leverage data to improve performance on some set of tasks.</p>
-          <p><a class="btn btn-lg btn-light" href="/intro">Start Learning now</a></p>
+          
         </div>
       </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100 h-100" src="/static/m2.png" alt="First slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>Another example headline.</h1>
-          <p>Some representative placeholder content for the second slide of the carousel.</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+    <div class="carousel-item" style="height:500px">
+      <img class="d-block w-100 h-100" style="height:500px;" src="https://www.wallpaperuse.com/wallp/48-484058_m.jpg" alt="First slide">
+      <div class="container" >
+        <div class="carousel-caption" style="margin-bottom:-50px">
+          <br>
+          <h1>Machine Learning Is The Future</h1>
+          <p >Machine Learning is responsible for cutting the workload and time.
+             By automating things we let the algorithm do the hard work for us.
+            <br>
+            Machine Learning can help in the detection of diseases more quickly.
+           It is helping to lift up businesses. That is why investing in ML technology is worth it.
+           Machine Learning has many factors that make it reliable. One of them is data handling.
+            ML plays the biggest role when it comes to data at this time. 
+          </p>
         </div>
       </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100 h-100" src="/static/machine.jpg" alt="First slide">
+    <div class="carousel-item"  style="height:500px">
+      <img class="d-block w-100"  style="height:500px;" src="/static/m2.png" alt="First slide">
       <div class="container">
-        <div class="carousel-caption text-end">
-          <h1>One more for good measure.</h1>
-          <p>Some representative placeholder content for the third slide of this carousel.</p>
-          <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+        <div class="carousel-caption" style="margin-left:720px">
+          <h1>Start Learning</h1>
+          <p>Start your journey to become a machine learning specialist</p>
+          <p><a class="btn btn-lg btn-primary" href="/intro">Start Now</a></p>
         </div>
       </div>
     </div>
